2009-05-07  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am:
	Create two different targets for marshal.c and marshal.h

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_play_radio_by_url_thread):
	Refactor code a bit.

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(lastfm_session_destroy):
	* src/lastfm-ws.c
	(lastfm_ws_radio_tune, lastfm_ws_radio_get_playlist):
	Manage custom playlists, storing them temporarily in the legacy
	LastfmSession object.

	* src/controller.c (controller_play_radio_by_url_thread):
	Use lastfm_ws_radio_tune() for custom playlists too.

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c
	(lastfm_ws_session_new, lastfm_ws_session_unref)
	(lastfm_ws_radio_tune, lastfm_ws_radio_get_playlist)
	* src/controller.c
	(start_playing_get_pls_thread)
	(controller_play_radio_by_url_thread):
	Store radio name in LastfmWsSession object.

2009-05-01  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_init):
	Set border only when using HildonWindow.

	Fixes #4041 (Vagalume UI issue: menu bar not flush with window
	frame)

2009-04-30  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_run_app):
	Don't call lastfm_ws_session_unref() on a NULL pointer

2009-04-30  Javier Jardon  <javierjc1982@gmail.com>

	* src/vgl-tray-icon.c (ctxt_menu_create):
	Replace deprecated calls to gtk_menu_append()

2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c:
	Renamed tag_data -> TagData and recomm_data -> RecommData
	(controller_tag_track):
	Include session object in TagData struct

2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/xmlrpc.[ch]:
	Mark xmlrpc.c as legacy API.

	* src/controller.[ch]
	* src/vgl-main-window.c:
	Remove unused includes and definitions.

2009-04-25  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c